samples/_failures_safe/1761072439_e2f748_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07f73eea.c: In function ‘main’:
./samples/SAFE/__tmp_07f73eea.c:167:42: error: expected ‘]’ at end of input
  167 |         printf(", Value='%s'\n", tokens[i
      |                                          ^
      |                                          ]
./samples/SAFE/__tmp_07f73eea.c:167:9: error: expected declaration or statement at end of input
  167 |         printf(", Value='%s'\n", tokens[i
      |         ^~~~~~
./samples/SAFE/__tmp_07f73eea.c:167:9: error: expected declaration or statement at end of input
